--- a/style.css
+++ b/style.css
@@ -32,11 +32,57 @@ body {
 }
 
 .logo-upper {
-    font-size: 13px;
+    font-size: 15px;
     margin: 0;
 }
+
 .logo-lower {
-    font-size: 20px;
+    text-shadow: rgba(255, 255, 255, 0.534) 3px 1px;
+    font-size: 30px;
     line-height: 20px;
     margin: 0;
+}
+
+.menubar {
+    margin-top: -16px;
+}
+
+.menubar ul {
+    padding: 0;
+    list-style: none;
+    /* width: 100%; */
+}
+
+.menu {
+    background-color: rgb(255, 208, 121);
+    text-align: center;
+    float: left;
+    border: 0.1px solid black;
+    width : calc(99.4% / 3);
+}
+
+.menu a {
+    display: block;
+}
+
+.topics {
+    display: block;
+    background-color: lightgray;
+    width: 80%;
+    margin: 50px auto;
+    height: 300px;
+}
+
+.topics-container {
+    display: block;
+    padding: 1px 20px;
+}
+
+.topics-container span {
+    color: red;
+    font-weight: bold;
+}
+
+.topics-container p {
+    border-bottom: 1px dotted black;
 }
